--- a/.drone.yml
+++ b/.drone.yml
@@ -38,10 +38,10 @@ steps:
   commands:
   - apt-get update
   - apt-get install --yes --no-install-recommends make poppler-utils wget xz-utils imagemagick unzip
-  - wget https://github.com/typst/typst/releases/download/v0.11.1/typst-x86_64-unknown-linux-musl.tar.xz --output-document=/tmp/typst-x86_64-unknown-linux-musl.tar.xz
+  - wget --progress=dot:mega https://github.com/typst/typst/releases/download/v0.12.0/typst-x86_64-unknown-linux-musl.tar.xz --output-document=/tmp/typst-x86_64-unknown-linux-musl.tar.xz
   - tar --strip-components=1 -xpf /tmp/typst-x86_64-unknown-linux-musl.tar.xz typst-x86_64-unknown-linux-musl/typst
   - mv typst /usr/bin
-  - wget https://use.fontawesome.com/releases/v6.6.0/fontawesome-free-6.6.0-desktop.zip --output-document=/tmp/fontawesome-free-6.6.0-desktop.zip
+  - wget --progress=dot:mega https://use.fontawesome.com/releases/v6.6.0/fontawesome-free-6.6.0-desktop.zip --output-document=/tmp/fontawesome-free-6.6.0-desktop.zip
   - unzip -j -d /tmp/fonts /tmp/fontawesome-free-6.6.0-desktop.zip "fontawesome-free-6.6.0-desktop/otfs/*"
   - export TYPST_FONT_PATHS=/tmp/fonts
   - make clean
